Updating NOAA Token
Creating the token in a file

--- a/noaa_apidata.ipynb
+++ b/noaa_apidata.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,9 @@
     "import requests\n",
     "from pprint import pprint\n",
     "import pandas as pd\n",
-    "import csv"
+    "import csv\n",
+    "# Import the API key\n",
+    "from api_keys import noaa_token"
    ]
   },
   {
@@ -40,6 +42,23 @@
    "metadata": {},
    "source": [
     "## Extract NOAA.GOV API Weather Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fcsCuWlQzwopmiRSBnYGFrqtlIQIVpdA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(noaa_token)"
    ]
   },
   {
@@ -284,7 +303,8 @@
     "# Pull API for Stations\n",
     "\n",
     "\n",
-    "api_token='fcsCuWlQzwopmiRSBnYGFrqtlIQIVpdA'\n",
+    "\n",
+    "\n",
     "api_stations_url = 'https://www.ncdc.noaa.gov/cdo-web/api/v2/stations'\n",
     "\n",
     "\n",
