--- a/noaa_apidata.ipynb
+++ b/noaa_apidata.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -195,214 +195,34 @@
        "      <td>1949-01-01</td>\n",
        "      <td>1949-12-01</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>COOP:010125</td>\n",
-       "      <td>ALAGA, AL US</td>\n",
-       "      <td>34.1</td>\n",
-       "      <td>31.13333</td>\n",
-       "      <td>-85.06667</td>\n",
-       "      <td>1935-05-01</td>\n",
-       "      <td>1936-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>COOP:010140</td>\n",
-       "      <td>ALBERTA, AL US</td>\n",
-       "      <td>53.3</td>\n",
-       "      <td>32.23220</td>\n",
-       "      <td>-87.41040</td>\n",
-       "      <td>1940-11-01</td>\n",
-       "      <td>2014-12-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>COOP:010148</td>\n",
-       "      <td>ALBERTVILLE, AL US</td>\n",
-       "      <td>348.1</td>\n",
-       "      <td>34.23333</td>\n",
-       "      <td>-86.16667</td>\n",
-       "      <td>1931-01-01</td>\n",
-       "      <td>1977-06-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>COOP:010160</td>\n",
-       "      <td>ALEXANDER CITY, AL US</td>\n",
-       "      <td>201.2</td>\n",
-       "      <td>32.93500</td>\n",
-       "      <td>-85.95556</td>\n",
-       "      <td>1969-10-01</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>COOP:010163</td>\n",
-       "      <td>ALEXANDER CITY 6 NE, AL US</td>\n",
-       "      <td>200.9</td>\n",
-       "      <td>32.98333</td>\n",
-       "      <td>-85.86667</td>\n",
-       "      <td>1942-11-01</td>\n",
-       "      <td>1969-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>COOP:010178</td>\n",
-       "      <td>ALICEVILLE, AL US</td>\n",
-       "      <td>59.4</td>\n",
-       "      <td>33.12720</td>\n",
-       "      <td>-88.15500</td>\n",
-       "      <td>1940-01-01</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>COOP:010184</td>\n",
-       "      <td>BEVILL LOCK AND DAM, AL US</td>\n",
-       "      <td>50.3</td>\n",
-       "      <td>33.21000</td>\n",
-       "      <td>-88.28780</td>\n",
-       "      <td>1980-05-01</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>COOP:010252</td>\n",
-       "      <td>ANDALUSIA 3 W, AL US</td>\n",
-       "      <td>76.2</td>\n",
-       "      <td>31.30710</td>\n",
-       "      <td>-86.52260</td>\n",
-       "      <td>1938-01-01</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>COOP:010260</td>\n",
-       "      <td>LEXINGTON, AL US</td>\n",
-       "      <td>231.6</td>\n",
-       "      <td>34.96285</td>\n",
-       "      <td>-87.37195</td>\n",
-       "      <td>2004-07-01</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>COOP:010267</td>\n",
-       "      <td>ANNISTON, AL US</td>\n",
-       "      <td>220.1</td>\n",
-       "      <td>33.66667</td>\n",
-       "      <td>-85.83333</td>\n",
-       "      <td>1948-01-01</td>\n",
-       "      <td>1949-03-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>COOP:010272</td>\n",
-       "      <td>ANNISTON METROPOLITAN AIRPORT, AL US</td>\n",
-       "      <td>181.8</td>\n",
-       "      <td>33.59043</td>\n",
-       "      <td>-85.84788</td>\n",
-       "      <td>1948-01-01</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>COOP:010338</td>\n",
-       "      <td>ARLEY 1 S, AL US</td>\n",
-       "      <td>227.1</td>\n",
-       "      <td>34.06667</td>\n",
-       "      <td>-87.23333</td>\n",
-       "      <td>1938-01-01</td>\n",
-       "      <td>1983-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>COOP:010369</td>\n",
-       "      <td>ASHLAND, AL US</td>\n",
-       "      <td>311.5</td>\n",
-       "      <td>33.29410</td>\n",
-       "      <td>-85.77880</td>\n",
-       "      <td>1948-01-01</td>\n",
-       "      <td>2013-11-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>COOP:010377</td>\n",
-       "      <td>ASHVILLE, AL US</td>\n",
-       "      <td>180.1</td>\n",
-       "      <td>33.85000</td>\n",
-       "      <td>-86.33333</td>\n",
-       "      <td>1941-06-01</td>\n",
-       "      <td>1973-06-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>COOP:010390</td>\n",
-       "      <td>ATHENS, AL US</td>\n",
-       "      <td>210.0</td>\n",
-       "      <td>34.77520</td>\n",
-       "      <td>-86.95080</td>\n",
-       "      <td>1948-01-01</td>\n",
-       "      <td>2015-11-01</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Station                             Station_name  Elevation(meters)  \\\n",
-       "0   COOP:010008                         ABBEVILLE, AL US              139.0   \n",
-       "1   COOP:010063                           ADDISON, AL US              239.6   \n",
-       "2   COOP:010071             ADDISON CENTRAL TOWER, AL US              302.1   \n",
-       "3   COOP:010116  ALABASTER SHELBY CO AIRPORT ASOS, AL US              172.5   \n",
-       "4   COOP:010117                    BELLE MINA 2 N, AL US              183.8   \n",
-       "5   COOP:010125                             ALAGA, AL US               34.1   \n",
-       "6   COOP:010140                           ALBERTA, AL US               53.3   \n",
-       "7   COOP:010148                       ALBERTVILLE, AL US              348.1   \n",
-       "8   COOP:010160                    ALEXANDER CITY, AL US              201.2   \n",
-       "9   COOP:010163               ALEXANDER CITY 6 NE, AL US              200.9   \n",
-       "10  COOP:010178                        ALICEVILLE, AL US               59.4   \n",
-       "11  COOP:010184               BEVILL LOCK AND DAM, AL US               50.3   \n",
-       "12  COOP:010252                     ANDALUSIA 3 W, AL US               76.2   \n",
-       "13  COOP:010260                         LEXINGTON, AL US              231.6   \n",
-       "14  COOP:010267                          ANNISTON, AL US              220.1   \n",
-       "15  COOP:010272     ANNISTON METROPOLITAN AIRPORT, AL US              181.8   \n",
-       "16  COOP:010338                         ARLEY 1 S, AL US              227.1   \n",
-       "17  COOP:010369                           ASHLAND, AL US              311.5   \n",
-       "18  COOP:010377                          ASHVILLE, AL US              180.1   \n",
-       "19  COOP:010390                            ATHENS, AL US              210.0   \n",
+       "       Station                             Station_name  Elevation(meters)  \\\n",
+       "0  COOP:010008                         ABBEVILLE, AL US              139.0   \n",
+       "1  COOP:010063                           ADDISON, AL US              239.6   \n",
+       "2  COOP:010071             ADDISON CENTRAL TOWER, AL US              302.1   \n",
+       "3  COOP:010116  ALABASTER SHELBY CO AIRPORT ASOS, AL US              172.5   \n",
+       "4  COOP:010117                    BELLE MINA 2 N, AL US              183.8   \n",
        "\n",
-       "    Latitude  Longitude    min_date    max_date  \n",
-       "0   31.57020  -85.24820  1948-01-01  2014-01-01  \n",
-       "1   34.21096  -87.17838  1938-01-01  2015-11-01  \n",
-       "2   34.41667  -87.31667  1940-05-01  1962-03-01  \n",
-       "3   33.17835  -86.78178  1995-04-01  2015-11-01  \n",
-       "4   34.68910  -86.88190  1949-01-01  1949-12-01  \n",
-       "5   31.13333  -85.06667  1935-05-01  1936-11-01  \n",
-       "6   32.23220  -87.41040  1940-11-01  2014-12-01  \n",
-       "7   34.23333  -86.16667  1931-01-01  1977-06-01  \n",
-       "8   32.93500  -85.95556  1969-10-01  2015-11-01  \n",
-       "9   32.98333  -85.86667  1942-11-01  1969-10-01  \n",
-       "10  33.12720  -88.15500  1940-01-01  2015-11-01  \n",
-       "11  33.21000  -88.28780  1980-05-01  2015-11-01  \n",
-       "12  31.30710  -86.52260  1938-01-01  2015-11-01  \n",
-       "13  34.96285  -87.37195  2004-07-01  2015-11-01  \n",
-       "14  33.66667  -85.83333  1948-01-01  1949-03-01  \n",
-       "15  33.59043  -85.84788  1948-01-01  2015-11-01  \n",
-       "16  34.06667  -87.23333  1938-01-01  1983-10-01  \n",
-       "17  33.29410  -85.77880  1948-01-01  2013-11-01  \n",
-       "18  33.85000  -86.33333  1941-06-01  1973-06-01  \n",
-       "19  34.77520  -86.95080  1948-01-01  2015-11-01  "
+       "   Latitude  Longitude    min_date    max_date  \n",
+       "0  31.57020  -85.24820  1948-01-01  2014-01-01  \n",
+       "1  34.21096  -87.17838  1938-01-01  2015-11-01  \n",
+       "2  34.41667  -87.31667  1940-05-01  1962-03-01  \n",
+       "3  33.17835  -86.78178  1995-04-01  2015-11-01  \n",
+       "4  34.68910  -86.88190  1949-01-01  1949-12-01  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "station_data_df=pd.DataFrame(station_data)\n",
-    "station_data_df.head(20)"
+    "station_data_df.head()"
    ]
   },
   {
