update new work

--- a/api_data_load.ipynb
+++ b/api_data_load.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,6 +28,7 @@
    "outputs": [],
    "source": [
     "# Import Dependencies\n",
+    "\n",
     "\n",
     "import json\n",
     "import requests\n",
@@ -308,6 +311,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
